<resources>
    <string name="app_name">Spark Library</string>
    <string name="etUserName">Username</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="LoginResultWarning">*Wrong username or password</string>
    <string name="tvRegisterName">Enter your name</string>
    <string name="tvRegisterLastname">Enter your lastname</string>
    <string name="tvRegisterUsername">Username</string>
    <string name="tvRegisterPassword">Password</string>
    <string name="btnRegisterSave">Register me</string>
    <string name="tvRegister">Register</string>
    <string name="LoginRequiredFields">*Please enter all required fields</string>
    <string name="RegisterRequiredFields">*Please enter all required fields</string>
    <string name="RegisterUserExists">User with that username already exists</string>
    <string name="PasswordMinLength">*Password must be at least 8 characters long</string>
    <string name="UserCreateSucces">created successfully</string>
    <string name="Success">Succes!</string>
    <string name="navTitleKnjige">Knjige</string>
    <string name="navTitleClanovi">Clanovi</string>
    <string name="navTitlePosudjeneKnjige">Posuđene knjige</string>
    <string name="navTitleProfileBox">Profil</string>
    <string name="navTitlePostavke">Postavke</string>
    <string name="navTitleOdjaviSe">Odjavi se</string>

    <string name="drawer_open">Otvori navigation drawer</string>
    <string name="drawer_close">Zatvori navigation drawer</string>
    <string name="tvAddBookNaslov">Enter title</string>
    <string name="tvAddBook">Add book</string>
    <string name="tvBookTitle">Enter book title</string>
    <string name="tvBookNaklada">Enter book edition</string>
    <string name="tvBookImeAutora">Enter Autor name</string>
    <string name="tvBookGodinaIzdanja">Enter publication year</string>
    <string name="tvBookBrojStranica">Enter page number</string>
    <string name="btnSaveBook">Save book</string>
    <string name="tvBookKlasifikacija">Select book classification</string>
    <string name="AddBookWarning">*Please enter required fields</string>
    <string name="AddBookSuccesTitleMessage">Knjiga uspjesno dodana!</string>
    <string name="Error">Oups error!!</string>
    <string name="AddKlasifikacijaDialogTitle">Add classification</string>
    <string name="hintDialogKlasifikacijaNaziv">Tehnologija</string>
    <string name="AddKlasifikacijaDialogPositive">Add</string>
    <string name="DialogCancel">Cancel</string>
    <string name="AddKlasifikacijaWarning">*That classification already exists!</string>
    <string name="menuFilterBook">Filter books</string>
    <string name="FilteBooksFilter">Filter</string>
    <string name="FilterBooksDialogTitle">Select your filter</string>
    <string name="contextMenuDelete">Delete</string>
    <string name="contextMenuEdit">Edit</string>
    <string name="BookUpdateSuccess">Book updated succesfully</string>
    <string name="tvPosudjivanjeKnjigaClanskiBroj">Upisite clanski broj</string>
    <string name="btnPosudiKnjigu">Posudi knjigu</string>
    <string name="EnterClanskiBroj">Unesite clanski broj</string>
    <string name="EnterValidClanskiBroj">Upisite validan clanski broj</string>
    <string name="PosudiKnjiguDialogTitle">Posudjivanje knjige</string>
    <string name="OK">U redu</string>
    <string name="PosudjivanjeKnjigeClanu">Posuđivanje knjige članu</string>
    <string name="VratiPosudjenuKnjiguDialogTitle">Vrati posudjenu knjigu</string>
    <string name="VratiPosudjenuKnjiguDialogMessage">Vraćanje posuđene knjige</string>
    <string name="VratiPosudjenuKnjiguDialogOK">Vrati knjigu</string>
    <string name="tvLogin">Login</string>
    <string name="tvEvidencijaClana">Evidencija clana</string>
    <string name="tvEvidencijaClanIme">Ime</string>
    <string name="tvEvidencijaClanPrezime">Prezime</string>
    <string name="tvEvidencijaClanAdresa">Adresa</string>
    <string name="tvEvidencijaClanBrojTelefona">Broj Telefona</string>
    <string name="tvEvidencijaClanClanskiBroj">Članski broj</string>
    <string name="btnSaveClan">Sačuvaj člana</string>
    <string name="evidencijaClanBrojTelefonaError">Unesite broj telefona</string>
    <string name="evidencijaClanAdresaError">Unesite adresu</string>
    <string name="evidencijaClanPrezimeError">Unesite prezime</string>
    <string name="evidencijaClanImeError">Unesite ime</string>
    <string name="not_a_member">Not a member?</string>
    <string name="WelcomeNavheader">Welcome</string>

</resources>
