<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.admin.sparklibrary.RegisterActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvAddBook"
            android:gravity="center"
            android:textSize="@dimen/AddBookLabel"
            android:layout_marginBottom="25dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvBookTitle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddBookNaklada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvBookNaklada" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddBookAutorIme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvBookImeAutora" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBookKlasifikacija" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spAddBookKlasifikacija"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp" />

            <ImageView
                android:id="@+id/ivAddKlasifikacija"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddBookGodinaIzdanja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvBookGodinaIzdanja"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddBookBrojStranica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvBookBrojStranica"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveBook" />

        <TextView
            android:id="@+id/tvAddBookWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>
</LinearLayout>
