<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.admin.sparklibrary.RegisterActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEvidencijaClana"
            android:gravity="center"
            android:textSize="@dimen/AddBookLabel"
            android:layout_marginBottom="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEvidencijaClanIme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvEvidencijaClanIme" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEvidencijaClanPrezime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvEvidencijaClanPrezime" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEvidencijaClanAdresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvEvidencijaClanAdresa" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEvidencijaClanBrojTelefona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvEvidencijaClanBrojTelefona"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEvidencijaClanClanskiBroj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvEvidencijaClanClanskiBroj"
                android:inputType="number"
                android:enabled="false"
                tools:text="CB150070" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnSaveClan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveClan" />

        <TextView
            android:id="@+id/tvEvidencijaClanaWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>
</LinearLayout>
